--- a/LoaderDemoExe/LoaderDemoExe.vcxproj.filters
+++ b/LoaderDemoExe/LoaderDemoExe.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="..\mmLoader\mmLoader.cpp">
       <Filter>mmLoader</Filter>
     </ClCompile>
-    <ClCompile Include="..\mmLoader\mmLoaderSC.cpp">
+    <ClCompile Include="..\mmLoader\mmLoaderSC.h">
       <Filter>mmLoader</Filter>
     </ClCompile>
   </ItemGroup>
