--- a/LoaderDemoExe/LoaderDemoExe.vcxproj
+++ b/LoaderDemoExe/LoaderDemoExe.vcxproj
@@ -107,6 +107,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClInclude Include="..\mmLoader\crc.h" />
+    <ClInclude Include="..\mmLoader\mmLoaderSC.h">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+      </PrecompiledHeader>
+      <FileType>CppCode</FileType>
+    </ClInclude>
     <CustomBuild Include="..\mmLoader\strmem.cxx" />
     <ClCompile Include="LoaderDemoExe.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -115,7 +121,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\mmLoader\crc.h" />
     <ClInclude Include="..\mmLoader\mmLoader.h" />
     <ClInclude Include="..\mmLoader\strmem.h" />
     <ClInclude Include="stdafx.h" />
