--- a/demo/demo-module/demo-module.vcxproj.filters
+++ b/demo/demo-module/demo-module.vcxproj.filters
@@ -36,4 +36,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="demo-module.def" />
+  </ItemGroup>
 </Project>
