--- a/BuildMultiplePlatforms.targets
+++ b/BuildMultiplePlatforms.targets
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="BuildMultiplePlatforms">
+<Project DefaultTargets="BuildMultiplePlatforms" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" >
   <Target Name="BuildMultiplePlatforms">
     <ItemGroup>
       <Configurations Include="Release"/>
@@ -8,7 +8,6 @@
         <Platform>%(Platforms.Identity)</Platform>
       </ConfigAndPlatform>
     </ItemGroup>
-    <MSBuild Projects="MemModLoader.sln" Targets="Build"
-             Properties="Configuration=%(ConfigAndPlatform.Identity);Platform=%(ConfigAndPlatform.Platform)"/>
+    <MSBuild Projects="MemModLoader.sln" Targets="Build" Properties="Configuration=%(ConfigAndPlatform.Identity);Platform=%(ConfigAndPlatform.Platform)"/>
   </Target>
 </Project>
