--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Create Build Environment
+    - name: Create Build Workspace for Win32
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
-      run: cmake -E make_directory ${{github.workspace}}/build
+      run: cmake -E make_directory ${{github.workspace}}/build.win32
 
     - name: Configure CMake for Win32
       # Use a bash shell so we can use the same syntax for environment variable
@@ -37,6 +37,12 @@ jobs:
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build .
+
+
+    - name: Create Build Workspace for x64
+      # Some projects don't allow in-source building, so create a separate build directory
+      # We'll use this as our working directory for all subsequent commands
+      run: cmake -E make_directory ${{github.workspace}}/build.x64
       
     - name: Configure CMake for x64
       # Use a bash shell so we can use the same syntax for environment variable
