--- a/.github/workflows/build-win-x64.yml
+++ b/.github/workflows/build-win-x64.yml
@@ -30,7 +30,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake $GITHUB_WORKSPACE -G "Visual Studio 16 2019" -A x64 -DCMAKE_SYSTEM_VERSION=10.0.18362.0 -DBUILD_SHELLCODE_GEN=TRUE -DBUILD_MMLOADER_DEMO=TRUE
+      run: cmake $GITHUB_WORKSPACE -A x64 -DBUILD_SHELLCODE_GEN=TRUE -DBUILD_MMLOADER_DEMO=TRUE
       
     - name: Build for Win64
       working-directory: ${{github.workspace}}/build.x64
